drop shadows added

--- a/honey-rae.html
+++ b/honey-rae.html
@@ -94,7 +94,7 @@
     <!-- ERD -->
     <section class="ERD">
         <h2>ERD</h2>
-        <img src="img/honey-rae/ERD.png" />
+        <img src="img/honey-rae/ERD.png" class="img-shadow" />
     </section>
 
 
