--- a/rhino-splits.html
+++ b/rhino-splits.html
@@ -113,7 +113,7 @@
   </section>
 
   <section class="tool-section">
-    <div class="designTools-section">
+    <div class="designTools-section img-shadow">
       <h2>
         Design Tools
       </h2>
@@ -141,8 +141,8 @@
     <h2>Research Plan</h2>
     <div class="research-div">
 
-      <div class="research-item">
-        <h3>Activities and Interactions</h3>
+      <div class="research-item img-shadow">
+        <h4><b>Activities and Interactions</b></h4>
         <ul>
           <li>Going to dinner with friends</li>
           <li>Paying rent to a roomate</li>
@@ -151,8 +151,8 @@
         </ul>
       </div>
 
-      <div class="research-item">
-        <h3>Environments</h3>
+      <div class="research-item img-shadow">
+        <h4><b>Environments</b></h4>
         <ul>
           <li>Restaurants</li>
           <li>Garage Sales</li>
@@ -162,8 +162,8 @@
         </ul>
       </div>
 
-      <div class="research-item">
-        <h3>Target Users</h3>
+      <div class="research-item img-shadow">
+        <h4><b>Target Users</b></h4>
         <ul>
           <li>College Students</li>
           <li>Tech Savy</li>
@@ -171,8 +171,8 @@
         </ul>
       </div>
 
-      <div class="research-item">
-        <h3>Competitors</h3>
+      <div class="research-item img-shadow">
+        <h4><b>Competitors</b></h4>
         <ul>
           <li>Venmo</li>
           <li>Google Pay</li>
@@ -193,7 +193,7 @@
       information about Venmo, Google Pay, Cash App, Apple Pay and Samsung Pay. While studying their apps, I compared
       their strength and weakness and was able to define areas of opportunity, where our app could supersede theirs.
     </p>
-    <img class="comp-img" src="images/Rhino-spit- Competitors.jpg" alt="graphic designer on computer">
+    <img class="comp-img img-shadow" src="images/Rhino-spit- Competitors.jpg" alt="graphic designer on computer">
   </section>
 
   <!--Interview Users-->
@@ -209,7 +209,7 @@
 
   <!--Interviews-->
   <section class="interview-section">
-    <div class="interviews">
+    <div class="interviews img-shadow">
       <p>
         The user interviews may be my favorite part of the research process! I started my interviews with a friendly
         greeting, to make sure the interviewee is at ease and a disclaimer to let them know they are being recorded.
@@ -243,7 +243,7 @@
     <!--Insights Div Left-->
     <h2>Insights</h2>
     <div class="insight-wrapper">
-      <div class="div-left">
+      <div class="div-left img-shadow">
         <p>
           While there were quite a few emerging themes amongst the interviewees, there were three key insights I
           discovered. 1. The user is very private about their money 2. The user does not like wasting time and 3. The
@@ -265,7 +265,7 @@
     <h3 class="process-header">&#60 Define Phase &#62</h3>
     <h2>Defining Our User</h2>
     <Div id="persona">
-      <img src="images/persona.png" class="img-fluid" alt="...">
+      <img src="images/persona.png" class="img-fluid img-shadow" alt="...">
     </Div>
     <div id="user-persona-comment">
       <p>
@@ -279,7 +279,7 @@
     <!--Journey Map-->
     <h2>Journey Mapping </h2>
     <div>
-      <img src="img/rhino-splits/RS-journeyMap.png" alt="">
+      <img src="img/rhino-splits/RS-journeyMap.png" class="img-shadow" alt="">
       <figcaption>
         *The journey map above is based on scenarios and stories that the user's shared in their interviews.
 
@@ -295,7 +295,7 @@
       <div class="goal-left">
         <img src="images/client-goals.gif" alt="Laptop with a website loaded">
       </div>
-      <div class="goal-right">
+      <div class="goal-right img-shadow">
         <p>
           When asking the client what would define success for her, she said that would be when the app was so
           successful that "Rhino Splits" would be used interchangably as a verb. While coming out with this app later in
@@ -330,11 +330,11 @@
     <h3 class="process-header">&#60 Design Phase &#62</h3>
     <h2>Sketches</h2>
     <div class="sketches">
-      <img src="images/Sketches-1.jpg" class="sketch-img" alt="">
+      <img src="images/Sketches-1.jpg" class="sketch-img img-shadow" alt="">
 
       <br>
 
-      <img src="images/Sketches-2.jpg" class="sketch-img" alt="">
+      <img src="images/Sketches-2.jpg" class="sketch-img img-shadow" alt="">
     </div>
   </section>
 
@@ -354,13 +354,13 @@
   <section class="wireframe-section">
     <h2>Wireframes</h2>
     <div id="wireframe">
-      <img src="images/wireframes.jpg" class="img-fluid" alt="">
+      <img src="images/wireframes.jpg" class="img-fluid img-shadow" alt="">
     </div>
   </section>
 
   <section class="style-guide">
     <h2>Style Guide</h2>
-    <img class="style-guide-img" src="images/Style-Guide1.jpg">
+    <img class="style-guide-img img-shadow" src="images/Style-Guide1.jpg">
   </section>
 
   <!--Mock Ups and Hi-Fi Prototyple-->
@@ -379,28 +379,10 @@
 
     <br>
 
-    <!-- <div class="img-mockups">
-      <img class="rhino-img" src="img/rhino-splits/rsmockup/1.png" alt="">
-      <img class="rhino-img" src="img/rhino-splits/rsmockup/2.png" alt="">
-      <img class="rhino-img" src="img/rhino-splits/rsmockup/3.png" alt="">
-      <img class="rhino-img" src="img/rhino-splits/rsmockup/4.png" alt="">
-      <img class="rhino-img" src="img/rhino-splits/rsmockup/5.png" alt="">
-      <img class="rhino-img" src="img/rhino-splits/rsmockup/6.png" alt="">
-      <img class="rhino-img" src="img/rhino-splits/rsmockup/7.png" alt="">
-      <img class="rhino-img" src="img/rhino-splits/rsmockup/8.png" alt="">
-      <img class="rhino-img" src="img/rhino-splits/rsmockup/9.png" alt="">
-      <img class="rhino-img" src="img/rhino-splits/rsmockup/10.png" alt="">
-      <img class="rhino-img" src="img/rhino-splits/rsmockup/11.png" alt="">
-      <img class="rhino-img" src="img/rhino-splits/rsmockup/12.png" alt="">
-      <img class="rhino-img" src="img/rhino-splits/rsmockup/13.png" alt="">
-      <img class="rhino-img" src="img/rhino-splits/rsmockup/14.png" alt="">
-      <img class="rhino-img" src="img/rhino-splits/rsmockup/15.png" alt="">
-      <img class="rhino-img" src="img/rhino-splits/rsmockup/16.png" alt="">
-    </div> -->
 
     <h5>Image Gallery</h5>
     <!-- Image Carousel -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide img-shadow" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
