--- a/visual-ui.html
+++ b/visual-ui.html
@@ -62,10 +62,10 @@
             <img style="margin-bottom: 1rem" class="ui-img" src="img/UI Challenges/6.png" alt="">
         </div>
         <br>
-        <img src="img/ui-visual/zen.png" alt="">
+        <img src="img/ui-visual/zen.png" class="img-shadow" alt="">
         <br>
 
-        <img src="img/ui-visual/business.png" alt="">
+        <img src="img/ui-visual/business.png" class="img-shadow" alt="">
         <br>
 
         <h3>Logos</h3>
