--- a/cake-my-day.html
+++ b/cake-my-day.html
@@ -144,7 +144,7 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
             </ol>
-            <div class="carousel-inner">
+            <div class="carousel-inner img-shadow">
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="img/cake/all/1.png" alt="First slide">
                 </div>
