--- a/cake-my-day.html
+++ b/cake-my-day.html
@@ -58,7 +58,7 @@
                 <strong>Cake My Day</strong>
             </h1>
             <h4>Mobile Application</h4>
-            <p class="section__subtitle section__subtitle--intro">UI Design</p>
+            <p class="section__subtitle section__subtitle--intro typewriter">UI Design</p>
         </div>
     </header>
 
