--- a/rhino-splits.html
+++ b/rhino-splits.html
@@ -53,7 +53,7 @@
         <strong>Rhino Splits</strong>
       </h1>
       <h4>Mobile Application</h4>
-      <p class="section__subtitle section__subtitle--intro">UX / UI Design </p>
+      <p class="section__subtitle section__subtitle--intro typewriter">UX / UI Design </p>
       <!-- <img src="#" alt="" class="intro__img"> -->
     </div>
   </header>
