--- a/visual-ui.html
+++ b/visual-ui.html
@@ -46,8 +46,8 @@
             <h1 class="section__title section__title--intro">
                 <strong>UI</strong>
             </h1>
-            <h4>UI & Visual Elements</h4>
-            <p class="section__subtitle section__subtitle--intro">Visual Design</p>
+            <!-- <h4>UI & Visual Elements</h4> -->
+            <p class="section__subtitle section__subtitle--intro typewriter">Visual Design</p>
         </div>
     </header>
 
