--- a/honey-rae.html
+++ b/honey-rae.html
@@ -51,7 +51,7 @@
                 <strong>Honey Rae Repairs</strong>
             </h1>
             <h4>Web Application</h4>
-            <p class="section__subtitle section__subtitle--intro">Front-End Development</p>
+            <p class="section__subtitle section__subtitle--intro typewriter">Front-End Development</p>
             <!-- <img src="#" alt="" class="intro__img"> -->
         </div>
     </header>
