--- a/rhino-splits.html
+++ b/rhino-splits.html
@@ -21,6 +21,11 @@
     href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
     rel="stylesheet">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
+
+
   <!-- Style sheet -->
   <link href="css/rhino-splits.css" rel="stylesheet">
   <link href="css/readMoreBtn.css" rel="stylesheet">
@@ -33,9 +38,9 @@
   <header>
     <div>
       <a href="index.html">
-          <img src="img/logo/1.png" alt="logo" class="logo">
+        <img src="img/logo/1.png" alt="logo" class="logo">
       </a>
-  </div>
+    </div>
     <button class="nav-toggle" aria-label="toggle navigation">
       <span class="hamburger"></span>
     </button>
@@ -92,7 +97,7 @@
     <div class="intro-left">
       <img src="img/rhino-splits/rhino-img.png" alt="">
     </div>
-    <div class="intro-right">
+    <div class="intro-right img-shadow">
       <h2>My Role</h2>
       <p> My role was to do the user research and design of this mobile app.
       </p>
@@ -122,8 +127,7 @@
   </section>
 
   <section>
-    <img src="img/rhino-splits/rsMocks.png"
-      class="img-fluid" alt="Responsive image">
+    <img src="img/rhino-splits/rsMocks.png" class="img-fluid" alt="Responsive image">
   </section>
 
   <!-- Discover Phase -->
