code cleaned up

--- a/lyrically.html
+++ b/lyrically.html
@@ -156,7 +156,7 @@
 
         <h2>Research Plan</h2>
         <div class="research-grid">
-            <div class="research-col">
+            <div class="research-col img-shadow">
                 <h4><b>Activities and Interactions</b></h4>
                 <ul>
                     <li>Live Gigs</li>
@@ -164,7 +164,7 @@
                     <li>Solo music practice</li>
                 </ul>
             </div>
-            <div class="research-col">
+            <div class="research-col img-shadow">
                 <h4><b>Environments</b></h3>
                     <ul>
                         <li>Bars</li>
@@ -175,7 +175,7 @@
                         <li>Music Venue</li>
                     </ul>
             </div>
-            <div class="research-col">
+            <div class="research-col img-shadow">
                 <h4><b>Target Users</b></h4>
                 <ul>
                     <li>Musicians</li>
@@ -183,7 +183,7 @@
                     <li>Songwriters</li>
                 </ul>
             </div>
-            <div class="research-col">
+            <div class="research-col img-shadow">
                 <h4><b>Competitors</b></h4>
                 <ul>
                     <li>OnSong</li>
@@ -193,7 +193,6 @@
                 </ul>
             </div>
         </div>
-
     </section>
 
 
@@ -203,8 +202,9 @@
         <img class="img-shadow" src="img/Lyrically/Ultimate-Guitar.jpeg" />
         <br>
         <img class="img-shadow" src="img/Lyrically/Onsong.jpeg" />
+    </section>
 
-        <br>
+    <section>
         <h2>User Interviews</h2>
         <p>Let's meet the users</p>
         <div class="interview-container">
@@ -212,6 +212,7 @@
             <img src="img/Lyrically/user1.png" />
         </div>
     </section>
+
 
     <section class="discover-section3">
         <h2>Research Synthesis</h2>
@@ -237,8 +238,8 @@
         <h2>User Persona</h2>
         <img class="user-img img-shadow" src="img/Lyrically/user persona.jpeg" />
 
-        <br>
-
+    </section>
+    <section>
         <h2>Journey Mapping</h2>
         <img class="journey-img img-shadow" src="img/Lyrically/journey-map.jpeg" />
     </section>
@@ -251,7 +252,8 @@
             The
             other constraint was time. Due to the limited time constraint, I was not able to do usability testing.
         </p>
-        <br>
+    </section>
+    <section>
         <h2>Site Map</h2>
         <img class="site-img img-shadow" src="img/Lyrically/site-map.webp" />
     </section>
@@ -264,8 +266,9 @@
 
         <h2>Wireframes</h2>
         <img class="wireframe-img img-shadow" src="img/Lyrically/wireframe.png" />
+    </section>
 
-        <br>
+    <section>
         <h2>Style Guide</h2>
         <img class="style-img" src="img/Lyrically/style-guide.png" />
         <p>After studying some of the brands that the users relate to, I noticed that several had black in them.
@@ -287,11 +290,11 @@
 
     <section class="deploy-section2">
         <h4>Video walkthrough of Lyrically</h4>
-        <video class="vid1" width="100%" height="auto" controls>
+        <video class="vid1 img-shadow" width="100%" height="auto" controls>
             <source src="img/Lyrically/Lyrically-waltkhough1.mp4">
         </video>
         <br>
-        <video class="vid2" width="100%" height="auto" controls src="img/lyrically/Lyrically-walkthrough2.mp4"></video>
+        <video class="vid2 img-shadow" width="100%" height="auto" controls src="img/lyrically/Lyrically-walkthrough2.mp4"></video>
         <br>
 
 
@@ -343,8 +346,6 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-
-
     </section>
 
 
