cleaned up code

--- a/manooth.html
+++ b/manooth.html
@@ -76,22 +76,24 @@
                 a project for my Adobe XD class, led by Adobe-certified instructor, Daniel Scott.</span> <a
                 onclick="readMore()" id="myBtn">Read more</a>
         </p>
+    </section>
 
 
-
+    <section>
         <h2>Objective</h2>
         <p>To build an e-commerce website and app for people to browse and purchase furniture for home delivery. The
             website should include: 1. Homepage (With a Nav {Living Room, Bedroom, Kitchen, Dining Room}, Hero Slider,
             New in Store, Inspiration Ideas, Clearance and a Footer) 2. Category Page and 3. Product Page</p>
     </section>
 
-
     <section class="role-section">
         <h2>My Role </h2>
         <p>As a student, my role was to create this entire website from the ground up, as well as a full app. I created
             wireframes, prototypes, mockups and ran usability tests.
         </p>
+    </section>
 
+    <section>
         <h2>Initial User Research</h2>
         <p>Since this was a brand new website, no existing data was available. However, since it is from an existing
             field, I was able to locate data online that applied to our users. Based on that data, I created a user
@@ -110,12 +112,14 @@
             visual heirachry from those of higher importance using contrast. Going into this, I wanted to keep core
             principles of Interaction Design, such as; consistency, visibility, predictability, learnability and
             feedback at the forefront of my design process.</p>
-
-        <h2>Final Navigation Experience</h2>
-        <p>I started with a sliding hero image to get the user’s attention. I kept the home page simple, using drop down
-            menus to guide the user to their perceived destination.</p>
-        <img class="media-img img-shadow" src="img/manooth/manooth1.png" alt="">
     </section>
+
+    <section>
+    <h2>Final Navigation Experience</h2>
+    <p>I started with a sliding hero image to get the user’s attention. I kept the home page simple, using drop down
+        menus to guide the user to their perceived destination.</p>
+    <img class="media-img img-shadow" src="img/manooth/manooth1.png" alt="">
+</section>
 
     <section>
         <p>On the product page, I added an interactive design, by making the star ratings pushable and the add to cart
@@ -126,8 +130,6 @@
     </section>
 
     <section class="final-section">
-
-
         <h2>Video Walkthrough</h2>
         <video controls class="manoothVidWeb" src="img/manooth/ManoothVidWeb.mp4"></video>
         <div class="btn-container">
@@ -135,7 +137,9 @@
                 <button class="btn"> <b>View Prototype</b></button>
             </a>
         </div>
+    </section>
 
+    <section>
         <!-- App Version -->
         <h2>The App version</h2>
 
@@ -176,10 +180,10 @@
             </a>
         </div>
         <br>
-        video walkthrough
+       <h5> Video Walkthrough</h5>
         <video class="manoothVid" controls src="img/manooth/appView/AppVid.mp4"></video>
-    </section>
 
+    </section>
 
 
 
