--- a/rhino-splits.html
+++ b/rhino-splits.html
@@ -119,9 +119,9 @@
 
   <section class="tool-section">
     <div class="designTools-section img-shadow">
-      <h2>
+      <h3 class="header-font">
         Design Tools
-      </h2>
+      </h3>
       <img src="img/rhino-splits/tools.png" alt="">
     </div>
   </section>
