--- a/lyrically.html
+++ b/lyrically.html
@@ -125,6 +125,9 @@
             </div>
         </div>
     </section>
+    <section>
+        <img src="img/Lyrically/mockup-lyrically.png" alt="">
+    </section>
 
     <section>
         <h2>Design Process</h2>
