spelling error fixed

--- a/lyrically.html
+++ b/lyrically.html
@@ -118,7 +118,7 @@
                 </p>
                 <br>
                 <h2>Solution</h2>
-                <p>To create an app that bridges the gab between digital setlists aimed at songwriters and those
+                <p>To create an app that bridges the gap between digital setlists aimed at songwriters and those
                     marketed to
                     cover
                     bands.</p>
