made adjustments to footer

--- a/cake-my-day.html
+++ b/cake-my-day.html
@@ -217,7 +217,7 @@
         </ul>
         <div class="copyright">
             <p><small>
-                    &#169 Tiffani Burk 2022. All rights reserved.
+                &#169  Designed and Developed by Tiffani Burk
                 </small></p>
         </div>
     </footer>
