--- a/manooth.html
+++ b/manooth.html
@@ -212,7 +212,7 @@
         </ul>
         <div class="copyright">
             <p><small>
-                    &#169 Tiffani Burk 2022. All rights reserved.
+                &#169  Designed and Developed by Tiffani Burk
                 </small></p>
         </div>
     </footer>
