error on footer adjusted

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
             <div class="copyright">
                 <p><small>
-                        &#169  Developed by Tiffani Burk
+                        &#169  Designed and Developed by Tiffani Burk
                     </small></p>
             </div>
         </footer>
