added alts and adjusted some images

--- a/rhino-splits.html
+++ b/rhino-splits.html
@@ -102,7 +102,7 @@
       <p> My role was to do the user research and design of this mobile app.
       </p>
 
-      <h2>Solution</h2>
+      <h2>Objective</h2>
       <p>
         My approach was to create a simplistic application that does one thing… really well. Sends and receives money.
         It didn’t need a ton of bells and whistles, so my goal was to keep it straight and to the point.
@@ -114,7 +114,7 @@
   <!--Design Process-->
   <section class="design-section">
     <h2>Design Process</h2>
-    <img src="img/design-process.png" alt="">
+    <img src="img/Lyrically/Design Thinking Methodology  2.png" alt="design thinking methodology">
   </section>
 
   <section class="tool-section">
@@ -122,12 +122,12 @@
       <h3 class="header-font">
         Design Tools
       </h3>
-      <img src="img/rhino-splits/tools.png" alt="">
+      <img src="img/rhino-splits/tools.png" alt="design tools">
     </div>
   </section>
 
   <section>
-    <img src="img/rhino-splits/rsMocks.png" class="img-fluid" alt="Responsive image">
+    <img src="img/rhino-splits/rsMocks.png" class="img-fluid" alt="Responsive image of mockups">
   </section>
 
   <!-- Discover Phase -->
@@ -358,13 +358,13 @@
   <section class="wireframe-section">
     <h2>Wireframes</h2>
     <div id="wireframe">
-      <img src="images/wireframes.jpg" class="img-fluid img-shadow" alt="">
+      <img src="images/wireframes.jpg" class="img-fluid img-shadow" alt="image of wireframe">
     </div>
   </section>
 
   <section class="style-guide">
     <h2>Style Guide</h2>
-    <img class="style-guide-img img-shadow" src="images/Style-Guide1.jpg">
+    <img class="style-guide-img img-shadow" src="images/Style-Guide1.jpg" alt="style guide image">
   </section>
 
   <!--Mock Ups and Hi-Fi Prototyple-->
