--- a/lyrically.html
+++ b/lyrically.html
@@ -117,7 +117,7 @@
                 <p class="role-p">I am the creator, designer and developer of this app.
                 </p>
                 <br>
-                <h2>Solution</h2>
+                <h2>Objective</h2>
                 <p>To create an app that bridges the gap between digital setlists aimed at songwriters and those
                     marketed to
                     cover
@@ -131,9 +131,10 @@
 
     <section>
         <h2>Design Process</h2>
-        <img class="design-proc" src="img/design-process.png" />
+        <img class="design-proc" src="img/Lyrically/Design Thinking Methodology  2.png" alt="design thinking methodology"
+         />
         <br>
-        <img class="design-proc img-shadow" src="img/Lyrically/Design Tools.png" />
+        <img class="design-proc img-shadow" src="img/Lyrically/Design Tools.png" alt="design tools"/>
     </section>
 
 
@@ -198,24 +199,24 @@
     <section class="discover-section2">
         <h2>Competitive Analysis</h2>
 
-        <img class="img-shadow" src="img/Lyrically/Ultimate-Guitar.jpeg" />
+        <img class="img-shadow" src="img/Lyrically/Ultimate-Guitar.jpeg" alt="competitive analysis image of ultamite guitar" />
         <br>
-        <img class="img-shadow" src="img/Lyrically/Onsong.jpeg" />
+        <img class="img-shadow" src="img/Lyrically/Onsong.jpeg" alt="competitive analysis image of OnSong" />
     </section>
 
     <section>
         <h2>User Interviews</h2>
         <p>Let's meet the users</p>
         <div class="interview-container">
-            <img src="img/Lyrically/musician-playing-electric-guitar.webp" alt="">
-            <img src="img/Lyrically/user1.png" />
+            <img src="img/Lyrically/musician-playing-electric-guitar.webp" alt="musician playing guitar">
+            <img src="img/Lyrically/user1.png" alt="post it notes"/>
         </div>
     </section>
 
 
     <section class="discover-section3">
         <h2>Research Synthesis</h2>
-        <img src="img/Lyrically/research.png" />
+        <img src="img/Lyrically/research.png" alt="post it notes" />
 
         <h2>Insights</h2>
         <p>The potential users of Lyrically had indicated that while they were content with the ease of use of the
@@ -235,12 +236,12 @@
 
 
         <h2>User Persona</h2>
-        <img class="user-img img-shadow" src="img/Lyrically/user persona.jpeg" />
+        <img class="user-img img-shadow" src="img/Lyrically/user persona.jpeg" alt="user persona image" />
 
     </section>
     <section>
         <h2>Journey Mapping</h2>
-        <img class="journey-img img-shadow" src="img/Lyrically/journey-map.jpeg" />
+        <img class="journey-img img-shadow" src="img/Lyrically/journey-map.jpeg" alt="journey map" />
     </section>
 
     <section class="define-section2">
@@ -254,7 +255,7 @@
     </section>
     <section>
         <h2>Site Map</h2>
-        <img class="site-img img-shadow" src="img/Lyrically/site-map.webp" />
+        <img class="site-img img-shadow" src="img/Lyrically/site-map.webp" alt="site map" />
     </section>
 
     <section class="design-section">
@@ -264,12 +265,12 @@
         </div>
 
         <h2>Wireframes</h2>
-        <img class="wireframe-img img-shadow" src="img/Lyrically/wireframe.png" />
+        <img class="wireframe-img img-shadow" src="img/Lyrically/wireframe.png" alt="wireframe"/>
     </section>
 
     <section>
         <h2>Style Guide</h2>
-        <img class="style-img" src="img/Lyrically/style-guide.png" />
+        <img class="style-img" src="img/Lyrically/style-guide.png" alt="style guide" />
         <p>After studying some of the brands that the users relate to, I noticed that several had black in them.
             Therefore I decided to brand Lyrically with black and purple.
         </p>
@@ -283,7 +284,7 @@
                 product. Please feel
                 free
                 to explore the code in the link below.</p>
-            <img class="deploy-img" src="img/Lyrically/lyrically-mock.png" />
+            <img class="deploy-img" src="img/Lyrically/lyrically-mock.png" alt="lyrically mockup"/>
         </div>
     </section>
 
