changes to photos with new PT

--- a/lyrically.html
+++ b/lyrically.html
@@ -96,17 +96,10 @@
             <br>
 
             <h2>What need does this fill?</h2>
-            <p>When songwriters gig, they are often required to add cover songs (other people’s songs) to their setlists
-                of
-                original material in order to get paid. Currently, there are apps to create setlists for cover songs and
-                there
-                are apps to create setlists for original songs, but there are no apps that allow the user to combine
-                both
-                covers
-                and original material. So musicians often have to switch between multiple apps while gigging and
-                rehearsing.
-                I
-                designed Lyrically as a solution to this problem.</p>
+            <p>Songwriters often find themselves having to play cover songs (other people's songs), along with their originals, in order to get
+                paid from a venue, however, they have no way to create a setlist that will store both types of songs,
+                originals and covers. This is a problem because it leads to unprofessional performances by the musician. I designed Lyrically as a solution to this problem.
+            </p>
         </div>
     </section>
     <section class="intro2-section">
@@ -131,10 +124,10 @@
 
     <section>
         <h2>Design Process</h2>
-        <img class="design-proc" src="img/Lyrically/Design Thinking Methodology  2.png" alt="design thinking methodology"
-         />
+        <img class="design-proc" src="img/Lyrically/Design Thinking Methodology  2.png"
+            alt="design thinking methodology" />
         <br>
-        <img class="design-proc img-shadow" src="img/Lyrically/Design Tools.png" alt="design tools"/>
+        <img class="design-proc img-shadow" src="img/Lyrically/Design Tools.png" alt="design tools" />
     </section>
 
 
@@ -149,7 +142,7 @@
             <p>To provide a way for musicians to store their music for both covers and original songs in one place,
                 while
                 being
-                able to easily arrange and change setlists. </p>
+                able to easily arrange and change setlists, so musicians can focus on having a smooth performance. </p>
         </div>
 
         <br>
@@ -199,7 +192,8 @@
     <section class="discover-section2">
         <h2>Competitive Analysis</h2>
 
-        <img class="img-shadow" src="img/Lyrically/Ultimate-Guitar.jpeg" alt="competitive analysis image of ultamite guitar" />
+        <img class="img-shadow" src="img/Lyrically/Ultimate-Guitar.jpeg"
+            alt="competitive analysis image of ultamite guitar" />
         <br>
         <img class="img-shadow" src="img/Lyrically/Onsong.jpeg" alt="competitive analysis image of OnSong" />
     </section>
@@ -209,7 +203,7 @@
         <p>Let's meet the users</p>
         <div class="interview-container">
             <img src="img/Lyrically/musician-playing-electric-guitar.webp" alt="musician playing guitar">
-            <img src="img/Lyrically/user1.png" alt="post it notes"/>
+            <img src="img/Lyrically/user1.png" alt="post it notes" />
         </div>
     </section>
 
@@ -244,6 +238,9 @@
         <img class="journey-img img-shadow" src="img/Lyrically/journey-map.jpeg" alt="journey map" />
     </section>
 
+    <!-- <img class="deploy-img" src="img/Lyrically/lyrically-mock.png" alt="lyrically mockup"/> -->
+
+
     <section class="define-section2">
         <h2>Client Goals & Contraints</h2>
         <p>The two biggest constraints of this project were time and money. Due to a limited budget, I was only able
@@ -265,7 +262,7 @@
         </div>
 
         <h2>Wireframes</h2>
-        <img class="wireframe-img img-shadow" src="img/Lyrically/wireframe.png" alt="wireframe"/>
+        <img class="wireframe-img img-shadow" src="img/Lyrically/wireframe.png" alt="wireframe" />
     </section>
 
     <section>
@@ -283,10 +280,15 @@
             <p class="deploy-descript">I had two weeks to take this application from ideation to a fully functioning
                 product. Please feel
                 free
-                to explore the code in the link below.</p>
-            <img class="deploy-img" src="img/Lyrically/lyrically-mock.png" alt="lyrically mockup"/>
+                to explore the interactive prototype .</p>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+                src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FzULTdYmweda8fAbgtyYjMO%2FLyrically%3Fpage-id%3D204%253A2773%26node-id%3D302-3951%26viewport%3D-505%252C225%252C0.13%26scaling%3Dscale-down%26starting-point-node-id%3D206%253A3089%26show-proto-sidebar%3D1"
+                allowfullscreen></iframe>
+
         </div>
     </section>
+
+    <img src="img/lyrically/lyrically-mock1.png" alt="">
 
     <section class="deploy-section2">
         <h4>Video walkthrough of Lyrically</h4>
@@ -294,7 +296,8 @@
             <source src="img/Lyrically/Lyrically-waltkhough1.mp4">
         </video>
         <br>
-        <video class="vid2 img-shadow" width="100%" height="auto" controls src="img/lyrically/Lyrically-walkthrough2.mp4"></video>
+        <video class="vid2 img-shadow" width="100%" height="auto" controls
+            src="img/lyrically/Lyrically-walkthrough2.mp4"></video>
         <br>
 
 
@@ -373,7 +376,7 @@
         </ul>
         <div class="copyright">
             <p><small>
-                &#169  Designed and Developed by Tiffani Burk
+                    &#169 Designed and Developed by Tiffani Burk
                 </small></p>
         </div>
     </footer>
